fix: style notifications scrollbar

--- a/src/contentscript/overlay/root/components/Overlay/Overlay.module.scss
+++ b/src/contentscript/overlay/root/components/Overlay/Overlay.module.scss
@@ -13,7 +13,7 @@
 .wrapper {
   overflow: auto;
 
-  height: 100%;
+  // height: 100%;
   padding: 17px 15px 5px 15px;
 
   background: $OverlayBG;
